welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:2: error: not found: value n
	var suite = new Array[Int](n)
                                   ^golomb:5: error: not found: value n
	for (x <- 1 to n-1) {
                       ^golomb:15: error: not found: value n
	return suite(n)
                     ^